@@ -153,9 +153,10 @@ void EmitCBaseVisitorConst::emitCFuncDecl(const AstCFunc* funcp, const AstNodeMo
     if (funcp->isStatic() && funcp->isProperMethod()) putns(funcp, "static ");
     if (funcp->isVirtual()) {
         UASSERT_OBJ(funcp->isProperMethod(), funcp, "Virtual function is not a proper method");
-        putns(funcp, "virtual ");
+        if (!funcp->isOverride()) putns(funcp, "virtual ");
     }
     emitCFuncHeader(funcp, modp, /* withScope: */ false);
+    if (funcp->isOverride()) putns(funcp, " override");
     if (funcp->emptyBody() && !funcp->isLoose() && !cLinkage) {
         putns(funcp, " {}\n");
     } else {
