@@ -1,4 +1,7 @@
 ''{b:'h1, i:'h2a, carray4:'{'h11, 'h22, 'h33, 'h44}, cwide:'{'h0, 'h0}, name:"object_name", r:2.2}'
 ''{b:'h1, i:'h2a, carray4:'{'h911, 'h922, 'h933, 'h944}, cwide:'{'h0, 'h0}, name:"object_name", r:2.2}'
 DEBUG: object_name (@0) message
+''{m_in_a:'h0, m_b:null, m_in_base:'h0}'
+''{m_in_a:'h0, m_b:$unit::ClsB, m_in_base:'h0}'
+''{m_in_a:'h0, m_b:$unit::ClsB, m_in_base:'h0}'
 *-* All Finished *-*
